5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1800_2567.log
== TEST (2019-06-11 08:32:28) 
-- CODE:
from numpy import*
a = float(input("insira o numero: "))


for i in a:
	a = a * "*" 
	a = a - 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:32:50) 
-- CODE:
from numpy import*
a = int(input("insira o numero: "))


for i in a:
	a = a * "*" 
	a = a - 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:34:39) 
-- CODE:
from numpy import*
a = int(input("insira o numero: "))


for i in "*">0:
	a = a * "*" 
	a = a - 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:35:02) 
-- CODE:
from numpy import*
a = int(input("insira o numero: "))


for i in a>0:
	a = a * "*" 
	a = a - 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:35:36) 
-- CODE:
from numpy import*
a = int(input("insira o numero: "))


while a>0:
	a = a * "*" 
	a = a - 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:36:49) 
-- CODE:
from numpy import*
a = int(input("insira o numero: "))
a

while a>0:
	a = a * "*" 
	a = a - 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:37:43) 
-- CODE:
a = int(input("insira o numero: "))


while a>0:
	a = a * "*" 
	a = a - 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = a - 1
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:38:20) 
-- CODE:
a = int(input("insira o numero: "))

b = ""
while a>0:
	b = a * "*" 
	a = a - 1
	print(b)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:42:23) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
	
c = ""
while a<9:
	c = d * "*" 
	 d = d + 1
	print(C)
-- ERROR:
File "XXXX", line 12
    d = d + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:42:31) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
	
c = ""
while a<9:
	c = d * "*" 
	d = d + 1
	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:43:04) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
	
c = ""
while a<9 and a>0:
	c = d * "*" 
	d = d + 1
	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:43:56) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
	
c = ""
while a<c:
	c = d * "*" 
	d = d  + 1
	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:46:57) 
-- CODE:
a = int(input("insira o numero: "))
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
	
c = ""
while a<c:
	c = d * "*" 
	d = d  + 1
	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:47:35) 
-- CODE:
a = int(input("insira o numero: "))
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
d = 1	
c = ""
while a<c:
	c = d * "*" 
	d = d  + 1
	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:48:10) 
-- CODE:
a = int(input("insira o numero: "))
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
d = 1	
c = ""
while a < a+1:
	c = d * "*" 
	d = d  + 1
	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:48:48) 
-- CODE:
a = int(input("insira o numero: "))
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
d = 1	
c = ""
while a>0:
	c = d * "*" 
	d = d  + 1
	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:49:49) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
d = 1	
c = ""
#while a>0:
#	c = d * "*" 
#	d = d  + 1
#	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:50:16) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
#d = 1	
c = ""
#while a>0:
#	c = d * "*" 
#	d = d  + 1
#	print(C)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:52:42) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while a>0:
	b = a * "*" 
	d = a - 1
	print(b)
	
#c = ""
#while a<9:
#	b = a * "*" 
#	c = d - 1
#	print(b)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:54:34) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while d>0:
	b = a * "*" 
	d = a - 1
	print(b)
	
#c = ""
#while a<9:
#	b = a * "*" 
#	c = d - 1
#	print(b)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:55:19) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while d>a:
	b = a * "*" 
	d = a - 1
	print(b)
	
#c = ""
#while a<9:
#	b = a * "*" 
#	c = d - 1
#	print(b)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:55:22) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while d>a:
	b = a * "*" 
	d = a - 1
	print(b)
	
#c = ""
#while a<9:
#	b = a * "*" 
#	c = d - 1
#	print(b)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:55:28) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while d>a:
	b = a * "*" 
	d = a - 1
	print(b)
	
#c = ""
#while a<9:
#	b = a * "*" 
#	c = d - 1
#	print(b)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:56:09) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while d>a:
	b = a * "*" 
	d = a - 1
	print(b)
	
#c = ""
#while a<9:
#	b = a * "*" 
#	c = d - 1
#	print(b)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:56:14) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while d>a:
	b = a * "*" 
	d = a - 1
	print(b)
	
#c = ""
#while a<9:
#	b = a * "*" 
#	c = d - 1
#	print(b)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:59:34) 
-- CODE:
a = int(input("insira o numero: "))
d = 0
b = ""
while d>a:
	b = a * "*" 
	d = a - 1
	print(b)
	
#c = ""
#while a<9:
#	b = a * "*" 
#	c = d - 1
#	print(b)
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:01:59) 
-- CODE:
a = int(input("insira um numero: "))

for x in a:
	b = a * "*"
	a = a - 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for x in a:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:02:41) 
-- CODE:
a = int(input("insira um numero: "))

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:02:52) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:04:37) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""	
while a< a + 1:
	c = a *"*"
	a = a + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
**********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:06:07) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""	
while a< a + 1:
	c = a *"*"
	a = a + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
**********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:07:44) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""	
while a<len(b):
	c = a *"*"
	a = a + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:08:59) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""	
while a<len(b):
	c = a *"*"
	a = a + (a-1)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    c = a *"*"
OverflowError: cannot fit 'int' into an index-sized integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:12:54) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""
x = 0
while len(c)<a:
	c = x * "*"
	x = x + 1 
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:13:18) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""
x = 0
while len(b)<a:
	c = x * "*"
	x = x + 1 
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:13:38) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""
x = 0
while x<a:
	c = x * "*"
	x = x + 1 
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:14:02) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""
x = 1
while x<a:
	c = x * "*"
	x = x + 1 
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:14:33) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""
x = 1
while x>a:
	c = x * "*"
	x = x + 1 
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:14:54) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)
c = ""
x = 1
while x>a:
	c = x * "*"
	x = x + 1 
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:17:02) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

	
c = ""
x = 1
while x<a:
	c = x * "*"
	x = x + 1 
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:19:10) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

	
c = ""
x = 1
while x<a:
	c = b 
	b = b + "*"
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:20:28) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

	
c = ""
x = 1
while len(x)<a:
	c = b 
	b = b + "*"
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while len(x)<a:
TypeError: object of type 'int' has no len()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:22:57) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

	
c = ""
x = 1
while x<a :
	c = b 
	b = b + "*"
	x = x +1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:28:49) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while i < a:
	c = b 
	b = b + "*"
	i = i + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:29:35) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while i < a:
	c = b 
	b = b * "*"
	i = i + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:31:49) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while i < a:
	c =  "*" + b
	b = b + "*"
	i = i + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:32:31) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while i < a:
	c =  "*" * i
	i = i + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:33:04) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while a > i:
	c =  "*" * i
	i = i + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:33:16) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while a > i:
	c =  "*" * i
	i = i + 1
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:45:31) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while a > i:
	i = i + 1
	c = "*"*i
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:45:35) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while a > i:
	i = i + 1
	c = "*"*i
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:47:02) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

i = 0	
c = ""
while a > i:
	i = i + 1
	c = "*"*i
	print(c)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:58:21) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:58:41) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

	for i in range(a + 1):
		print(i *"*")
-- OUTPUT:
********

*
**
***
****
*****
******
*******
*******

*
**
***
****
*****
******
******

*
**
***
****
*****
*****

*
**
***
****
****

*
**
***
***

*
**
**

*
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:59:04) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:59:54) 
-- CODE:
a = int(input("insira um numero: "))
b = ""

while a > 0 :
	b = c * "*"
	c = a - 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    b = c * "*"
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:00:13) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = 0
while a > 0 :
	b = c * "*"
	c = a - 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- OUTPUT:
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:11:37) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = 0
while a > 0 :
	b = a * "*"
	a = a - 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:24:09) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c* "*"
	a = c- 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- OUTPUT:
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
********
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:25:45) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c  "*"
	c= c  1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- ERROR:
File "XXXX", line 5
    b = c  "*"
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:06) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c  "*"
	c = c + 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- ERROR:
File "XXXX", line 5
    b = c  "*"
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:14) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c + 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- OUTPUT:
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*******************************************
********************************************
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:27:46) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c + 1
	print(b)

for i in range(a + 1):
	print(i *"*")
-- OUTPUT:
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*******************************************
********************************************
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:11) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c + 1
	print(b)

-- OUTPUT:
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*******************************************
********************************************
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:39) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c + 1
	print(b)

-- OUTPUT:
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*******************************************
********************************************
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:37:55) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c + 1
	print(b)

-- OUTPUT:
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*******************************************
********************************************
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:02) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c + 1
	print(b)

-- OUTPUT:
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
**************************
***************************
****************************
*****************************
******************************
*******************************
********************************
*********************************
**********************************
***********************************
************************************
*************************************
**************************************
***************************************
****************************************
*****************************************
******************************************
*******************************************
********************************************
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:16) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c - 1
	print(b)

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:46) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c - 1
	print(b)
for i in range(a + 1):
	print(i *"*")

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:38:57) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c - 1
	print(b)
for i in range(a + 1):
	print(i *"*")

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:39:15) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c - 1
	print(b)
for i in range(a + 1):
	print(i *"*")

-- EXECUTION TIME:
1.29036
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 08:52:39) 
-- CODE:
a = int(input("insira um numero: "))
b = ""
c = a
while c > 0 :
	b = c * "*"
	c = c - 1
	print(b)
for i in range(a + 1):
	print(i *"*")

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
